--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,14 +1,25 @@
 <h4 class="text-center">Login</h4>
 
-<form class="form mt-4">
+<form class="form mt-4" (ngSubmit)="login()">
   <div class="form-group mb-2">
-    <input class="form-control" placeholder="Nome do Usuário" />
+    <input
+      class="form-control"
+      placeholder="Nome do Usuário"
+      name="usuario"
+      [(ngModel)]="usuario"
+    />
   </div>
   <div class="form-group mb-4">
-    <input class="form-control" type="password" placeholder="Senha" />
+    <input
+      class="form-control"
+      type="password"
+      placeholder="Senha"
+      name="senha"
+      [(ngModel)]="senha"
+    />
   </div>
 
-  <div class="row px-2">
+  <div class="d-grid">
     <button type="submit" class="btn btn-primary btn-">Login</button>
   </div>
 </form>
