--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,13 +1,19 @@
 <h4 class="text-center">Login</h4>
 
-<form class="form mt-4" (ngSubmit)="login()">
+<form class="form mt-4" (ngSubmit)="login()" #loginForm="ngForm">
   <div class="form-group mb-2">
     <input
       class="form-control"
       placeholder="Nome do Usuário"
       name="usuario"
       [(ngModel)]="usuario"
+      #campoUsuario="ngModel"
+      required
     />
+    <app-mensagem
+      mensagem="Usuário obrigatório"
+      *ngIf="campoUsuario.invalid && campoUsuario.touched"
+    ></app-mensagem>
   </div>
   <div class="form-group mb-4">
     <input
@@ -16,10 +22,16 @@
       placeholder="Senha"
       name="senha"
       [(ngModel)]="senha"
+      #campoSenha="ngModel"
+      required
     />
+    <app-mensagem
+      mensagem="Senha obrigatória"
+      *ngIf="campoSenha.invalid && campoSenha.touched"
+    ></app-mensagem>
   </div>
 
   <div class="d-grid">
-    <button type="submit" class="btn btn-primary btn-">Login</button>
+    <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Login</button>
   </div>
 </form>
