--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -35,3 +35,5 @@
     <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Login</button>
   </div>
 </form>
+
+<p>Não é um usuário? <a [routerLink]="['novo-usuario']">Registre-se</a></p>
