--- a/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/home/novo-usuario/novo-usuario.component.html
@@ -3,18 +3,48 @@
 <form class="form mt-4" [formGroup]="novoUsuarioForm" (submit)="cadastrar()">
   <div class="form-group">
     <input placeholder="E-mail" class="form-control" formControlName="email" />
+    <app-mensagem
+      mensagem="E-mail é obrigatório"
+      *ngIf="novoUsuarioForm.get('email')?.errors?.required
+        && novoUsuarioForm.get('email')?.touched"
+    ></app-mensagem>
+    <app-mensagem
+      mensagem="Favor inserir um e-mail válido"
+      *ngIf="novoUsuarioForm.get('email')?.errors?.email
+        && novoUsuarioForm.get('email')?.touched"
+    ></app-mensagem>
   </div>
 
   <div class="form-group mt-2">
     <input placeholder="Nome completo" class="form-control" formControlName="fullName" />
+    <app-mensagem
+      mensagem="Nome completo é obrigatório"
+      *ngIf="novoUsuarioForm.get('fullName')?.errors?.required
+        && novoUsuarioForm.get('fullName')?.touched"
+    ></app-mensagem>
+    <app-mensagem
+      mensagem="Nome completo precisa ter ao menos 4 dígitos"
+      *ngIf="novoUsuarioForm.get('fullName')?.errors?.minlength
+        && novoUsuarioForm.get('fullName')?.touched"
+    ></app-mensagem>
   </div>
 
   <div class="form-group mt-2">
     <input placeholder="Usuário" class="form-control" formControlName="userName" />
+    <app-mensagem
+      mensagem="Usuário é obrigatório"
+      *ngIf="novoUsuarioForm.get('userName')?.errors?.required
+        && novoUsuarioForm.get('userName')?.touched"
+    ></app-mensagem>
   </div>
 
   <div class="form-group mt-2">
     <input type="password" placeholder="Senha" class="form-control" formControlName="password" />
+    <app-mensagem
+      mensagem="Senha é obrigatória"
+      *ngIf="novoUsuarioForm.get('password')?.errors?.required
+        && novoUsuarioForm.get('password')?.touched"
+    ></app-mensagem>
   </div>
 
   <div class="d-grid mt-4">
