--- a/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/home/novo-usuario/novo-usuario.component.html
@@ -36,6 +36,12 @@
       *ngIf="novoUsuarioForm.get('userName')?.errors?.required
         && novoUsuarioForm.get('userName')?.touched"
     ></app-mensagem>
+
+    <app-mensagem
+      mensagem="Usuário só pode ter caracteres minúsculos"
+      *ngIf="novoUsuarioForm.get('userName')?.errors?.minusculo
+        && novoUsuarioForm.get('userName')?.touched"
+    ></app-mensagem>
   </div>
 
   <div class="form-group mt-2">
